# ivar

./: .gitignore  Dockerfile  Doxyfile  Makefile  Makefile.am  Makefile.in  README  README.md  alignment  alignment.cpp  allele_functions.cpp  allele_functions.h  call_consensus  call_consensus.cpp  call_consensus.py  call_consensus.sh  call_consensus_pileup  call_consensus_pileup.cpp  call_consensus_pileup.h  call_variants  call_variants.cpp  call_variants.sh  combine_variants.py  config.h  config.h.in  configure  configure.ac  get_masked_amplicons.py  ivar  ivar.cpp  ivar.sh  main.cpp  primer_bam_to_bed.sh  primer_bed.cpp  primer_bed.h  remove_reads_from_amplicon  remove_reads_from_amplicon.cpp  trim_primer_quality.cpp  trim_primer_quality.h  variantutils.py
.github/workflows/: ccpp.yml  clang-format-check.yml
data/: pair_info_2.tsv  pair_information.tsv  test.bed  test.filtered.tsv  test.gap.sorted.bam  test.gap.sorted.bam.bai  test.gap.sorted.mpileup  test.gff  test.indel.mpileup  test.sim.merged.sorted.bam  test.sim.merged.sorted.bam.bai  test.sorted.bam  test.sorted.bam.bai  test.trimmed.sorted.bam  test.unmapped.sorted.bam  test_amplicon.sorted.bam  test_isize.sorted.bam  test_merged.bed
data/db/: test_ref.fa
data/primer_only/: primer_edge_cases.bam  primer_edge_cases.bam.bai
data/primer_pair_test/: test_primer_pair.bed  test_primer_pair_trim.tsv  test_primer_pair_trim.untrimmed.bam
docs/: COOKBOOK.md  INSTALLATION.md  MANUAL.md  README.md  header.html
docs/html/: _c_o_o_k_b_o_o_k_8md_source.html  _i_n_s_t_a_l_l_a_t_i_o_n_8md_source.html  _m_a_n_u_a_l_8md_source.html  _r_e_a_d_m_e_8md_source.html  _readme_8md_source.html  alignment_8cpp_source.html  alignment_8h_source.html  allele__functions_8cpp_source.html  allele__functions_8h_source.html  annotated.html  bam__to__bed_8cpp_source.html  call__consensus_8cpp_source.html  call__consensus__pileup_8cpp_source.html  call__consensus__pileup_8h_source.html  call__variants_8cpp_source.html  call__variants_8h_source.html  classes.html  classprimer-members.html  classprimer.html  classsuffix__node-members.html  classsuffix__node.html  classsuffix__node__coll__graph.dot  classsuffix__node__coll__graph.md5  cookbookpage.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  get__common__consensus_8cpp_source.html  get__masked__amplicons_8cpp_source.html  get__masked__amplicons_8h_source.html  globals.html  globals_func.html  graph_legend.html  index.html  installpage.html  ivar_8cpp.html  ivar_8cpp__incl.dot  ivar_8cpp__incl.md5  ivar_8cpp_source.html  manualpage.html  md__r_e_a_d_m_e.html  (+22 more)
docs/html/search/: all_0.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  functions_0.js  pages_0.js  pages_2.js  searchdata.js
docs/latex/: annotated.tex  classprimer.tex  classsuffix__node.tex  classsuffix__node.tex.tmp  classsuffix__node__coll__graph.dot  classsuffix__node__coll__graph.md5  cookbookpage.tex  files.tex  index.tex  installpage.tex  ivar_8cpp.tex  ivar_8cpp.tex.tmp  ivar_8cpp__incl.dot  ivar_8cpp__incl.md5  manualpage.tex  md_docs__r_e_a_d_m_e.tex  refman.tex  structallele.tex  structargs__t.tex  structcigar__.tex  structmaj.tex  structret__t.tex
docs/man/man3/: allele.3  args_t.3  cigar_.3  cookbookpage.3  installpage.3  ivar.cpp.3  maj.3  manualpage.3  md__r_e_a_d_m_e.3  md_docs__r_e_a_d_m_e.3  primer.3  ret_t.3  suffix_node.3
htslib-1.7/: bgzip  config.h  config.mk  config.status  configure  htsfile  libhts.dylib  tabix
htslib-1.7/autom4te.cache/: output.0  requests  traces.0
htslib-1.7/test/: fieldarith  hfile  hts_endian  sam  test-bcf-sr  test-bcf-translate  test-regidx  test-vcf-api  test-vcf-sweep  test_bgzf  test_view
pipeline/: Snakefile  pipeline.dot
pipeline_consensus/: Snakefile  config.json  example_samples.tsv
pipeline_field/: Snakefile  pipeline_field.dot
samtools-1.7/: config.h  config.mk  config.status  configure  samtools
samtools-1.7/autom4te.cache/: output.0  requests  traces.0
samtools-1.7/misc/: ace2sam  maq2sam-long  maq2sam-short  md5fa  md5sum-lite  wgsim
samtools-1.7/test/: vcf-miniview
samtools-1.7/test/merge/: test_bam_translate  test_rtrans_build  test_trans_tbl_init
samtools-1.7/test/split/: test_count_rg  test_expand_format_string  test_filter_header_rg  test_parse_args
scripts/: Makefile.am  get_common_variants.sh  get_masked_amplicons.py  ivar.sh  primer_bam_to_bed.sh  variantutils.py
src/: Makefile  Makefile.am  Makefile.in  alignment.cpp  alignment.h  allele_functions.cpp  allele_functions.h  call_consensus.cpp  call_consensus_pileup.cpp  call_consensus_pileup.h  call_variants.cpp  call_variants.h  get_common_variants.cpp  get_common_variants.h  get_masked_amplicons.cpp  get_masked_amplicons.h  interval_tree.cpp  interval_tree.h  ivar  ivar.cpp  parse_gff.cpp  parse_gff.h  primer_bed.cpp  primer_bed.h  ref_seq.cpp  ref_seq.h  remove_reads_from_amplicon.cpp  remove_reads_from_amplicon.h  suffix_tree.cpp  suffix_tree.h  trim_primer_quality.cpp  trim_primer_quality.h  vcf_writer.cpp  vcf_writer.h
src/.deps/: allele_functions.Po  call_consensus_pileup.Po  call_variants.Po  ivar.Po  primer_bed.Po  remove_reads_from_amplicon.Po  trim_primer_quality.Po
tests/: Makefile.am  check_quality_trim.cpp  test_allele_depth.cpp  test_amplicon_search.cpp  test_call_consensus_from_plup.cpp  test_common_variants.cpp  test_consensus_input_id.cpp  test_consensus_min_depth.cpp  test_consensus_min_insert_threshold.cpp  test_consensus_seq_id.cpp  test_consensus_threshold.cpp  test_getmasked.cpp  test_interval_tree.cpp  test_isize_trim.cpp  test_primer_bed.cpp  test_primer_trim.cpp  test_primer_trim_edge_cases.cpp  test_primer_trim_pairs.cpp  test_ref_seq.cpp  test_removereads.cpp  test_trim.cpp  test_trim_isize_filter.cpp  test_unpaired_trim.cpp  test_variants.cpp
usage/: usage_all.txt  usage_callvariants.txt  usage_consensus.txt  usage_createbed.txt  usage_filtervariants.txt  usage_getmasked.txt  usage_removereads.txt  usage_trim.txt
